--- a/Garson/Base.lproj/Main_iPhone.storyboard
+++ b/Garson/Base.lproj/Main_iPhone.storyboard
@@ -72,10 +72,10 @@
             </objects>
             <point key="canvasLocation" x="1579" y="-116"/>
         </scene>
-        <!--Menu Items View Controller - Select Items-->
+        <!--Table View Controller - Select Items-->
         <scene sceneID="mJD-fg-cU7">
             <objects>
-                <tableViewController storyboardIdentifier="MenuItemsVC" id="yaP-tm-ztn" customClass="CVNMenuItemsViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="MenuItemsVC" id="yaP-tm-ztn" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="178" sectionHeaderHeight="22" sectionFooterHeight="22" id="R4D-xG-i5t">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -83,7 +83,7 @@
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" red="0.22138962149620056" green="0.24613907933235168" blue="0.31197181344032288" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuItemCell" rowHeight="178" id="GQ2-8K-wTP" customClass="CVNMenuItemCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuItemCell" rowHeight="178" id="GQ2-8K-wTP">
                                 <rect key="frame" x="0.0" y="22" width="320" height="178"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GQ2-8K-wTP" id="hPl-Ms-vMu">
@@ -173,10 +173,10 @@
             </objects>
             <point key="canvasLocation" x="2417" y="139"/>
         </scene>
-        <!--Menu Sections View Controller - Menu-->
+        <!--Collection View Controller - Menu-->
         <scene sceneID="Atk-aQ-mRL">
             <objects>
-                <collectionViewController storyboardIdentifier="MenuSectionsVC" autoresizesArchivedViewToFullSize="NO" id="1BA-Ic-4OR" customClass="CVNMenuSectionsViewController" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="MenuSectionsVC" autoresizesArchivedViewToFullSize="NO" id="1BA-Ic-4OR" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="zpg-DD-xNW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -189,7 +189,7 @@
                             <inset key="sectionInset" minX="30" minY="5" maxX="30" maxY="5"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MenuSectionCell" id="lpL-E5-J5Q" customClass="CVNMenuSectionCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MenuSectionCell" id="lpL-E5-J5Q">
                                 <rect key="frame" x="30" y="5" width="80" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -434,6 +434,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HRb-7E-mwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2038" y="800"/>
+        </scene>
+        <!--Menu Items View Controller-->
+        <scene sceneID="62O-Ni-Cld">
+            <objects>
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="IX8-OA-fmt" customClass="CVNMenuItemsViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="0bp-El-gk1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PA3-q0-t4j">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="z1V-MN-Kmi">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="IX8-OA-fmt" id="FjX-Z2-QTP"/>
+                            <outlet property="delegate" destination="IX8-OA-fmt" id="hPI-zf-tJ4"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4ue-Fz-eyx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2421" y="800"/>
         </scene>
         <!--Sliding View Controller-->
         <scene sceneID="GLm-oc-oQO">
